-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
550685089 (dev), 0a5be27db (6.9)
The attached file triggers an assertion when run through qmllint
For Gerrit Dashboard: QTBUG-137110 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
647471,4 | QmlCompiler: Type-propagate retrieval of function, context and argc | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
648259,3 | QmlCompiler: Type-propagate retrieval of function, context and argc | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |