QmlCompiler: Type-propagate retrieval of function, context and argc

We don't want this to crash.

Fixes: QTBUG-137110
Change-Id: I231d52aa5defb9b868364c7840bfc7cb2a6f0e92
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 5506850899e46efd05ab912390b397df05e158b9)
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>