tests/auto/qml/qmllint/data/retrieveFunction.qml
@@ -1,0 +1,5 @@
+import QtQml
+
+QtObject {
+  objectName: function row() { return 1 > row; }
+}
